--- a/Test/XDayUnity.AI.Test.asmdef
+++ b/Test/XDayUnity.AI.Test.asmdef
@@ -9,7 +9,8 @@
         "BEPUphysics",
         "FixedMath",
         "XDay",
-        "XDayUnity.AI"
+        "XDayUnity.AI",
+        "XDayUnity.Asset"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
